# Comprex

./: #CMakeLists.txt#  ..run  .gitignore  CMakeLists.txt  ComprEx.py  GaspiEx.py  README.md  allreduce.py  allreduceOp.py  common.py  gpi.py
LeNet/: .gitignore  gaspi_run.sh  main.py  model.py  run.sh  run_aux.sh
cmake/: FindIBverbs.cmake  FindTensorflow.cmake
examples/: CMakeLists.txt  allreduce_speed.cpp  comprEx.cpp  comprEx.py  comprex_speed.cpp  example0.cpp  example1.cpp  gaspiEx.cpp  gaspiEx.py  myRandomGen.hxx  tictocTimer.hxx
examples/MultiLayerPerceptron/: CMakeLists.txt  readme.md
examples/MultiLayerPerceptron/src/: CMakeLists.txt  DNN.proto  MLP.h  main.cc  optimizer.h  read_MNIST.h
examples/MultiLayerPerceptron/src/layers/: DNN.pb.cc  DNN.pb.h  DNNLayer.h  Layer.pb.cc  Layer.pb.h  Layer.proto  LossLayer.h  add_bias.h  add_bias_test.cc  argmax.h  conv2d.h  conv2d_test.cc  dropout.h  dropout_test.cc  flatten.h  flatten_test.cc  fully_connected.h  fully_connected_test.cc  initializer.h  layer_test.cc  layer_utils.h  layers.h  maxpool2d.h  maxpool2d_test.cc  mse_loss.h  mse_loss_test.cc  regularizer.h  relu.h  relu_test.cc  smce_loss.h  smce_loss_test.cc  softmax.h  softmax_test.cc  tensor.h  test_utils.h
include/: allreduce.hxx  comprEx.hxx  comprex.hxx  comprexchange.hxx  gaspiEnvironment.hxx  gaspiEx.hxx
include/GaspiCxx/: GaspiCxx.hpp
keras/: callbacks.py  comprex_optimizer.py
pyGPI/: .gitignore  CMakeLists.txt  ComprEx.py  GaspiEx.py  Gpi.py  __init__.py
pyGPI/examples/: CMakeLists.txt  allreduce.py  comprexAllreduce.py  example0.cpp  example0.py  example1.cpp  example1.py  myRandomGen.cxx
pyGPI/include/: comprex.hxx
pyGPI/keras/: callbacks.py  gpiOptimizer.py
pyGPI/src/: CMakeLists.txt  ComprEx_C.cpp  ETI.cpp  GPI_C.cpp  GaspiEx_C.cpp  compressedExchange.hxx  compressedVector.hxx  compressor.hxx  gaspiExchange.hxx  threshold.hxx
pyGPI/test/: CMakeLists.txt  compressedExchange_test.cpp  compressor_test.cpp  gaspiExchange_test.cpp  pyGPI_test.py  threshold_test.cpp
simple/: .gitignore  callbacks.py  data.py  gaspi_run.sh  gpiOptimizer.py  gpi_env.py  main.py  model.py  run.sh  util.py
src/: AbstractExchange.hxx  CMakeLists.txt  ETI.cpp  GPI_C.cpp  allreduce.tpp  allreduce_C.cpp  comprEx.tpp  comprEx_C.cpp  compressor.hxx  comprex.cxx  comprexchange.cxx  gaspiEnvironment.tpp  gaspiEx.tpp  gaspiEx_C.cpp  mThrRLEcompress.cxx  mThrRLEcompress.hxx  mThrTopKcompress.cxx  mThrTopKcompress.hxx  mThrTopKcompress.new.cxx  runLenComprEx.cxx  runLenCompressr.cxx  runLenCompressr.hxx  threshold.hxx  topKcomprEx.cxx
src/tf_ops/: CMakeLists.txt  tfAllreduce.cc
test/: AllToOneAllreduce.cpp  AllToOneAllreduce.py  BigRingAllreduce.cpp  BigRingAllreduce.py  CMakeLists.txt  RingAllreduce.cpp  RingAllreduce.py  TFallreduceOp.py  basicGPI.py  compressor.cpp  comprex.cpp  gaspiExchange.cpp  threshold.cpp
tf_ops/: CMakeLists.txt
tf_ops/src/: CMakeLists.txt  ops.cc
